All Buttons now link to pages correctly
Every button that can be pressed now takes the user to the correct component. Along with the out of bounds url being correctly redirected to a url no page found.

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,7 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+.active{
+    font-size: 48px;
+    font-weight: bold;
+}
